<resources>
    <string name="app_name">AM-FM Coder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="letters">אותיות</string>
    <string name="binary">בינארי</string>
    <string name="enter_dict_name">הכנס שם מילון</string>
    <string name="am">AM</string>
    <string name="fm">FM</string>
    <string name="enter_message">הכנס הודעה</string>
    <string name="play">נגן</string>
    <string name="play_riddle">נגן חידה</string>

    <string name="menu_home">בית</string>
    <string name="menu_bin">מילונים בינארים</string>
    <string name="menu_letter">מילוני הצפנה</string>
    <string name="menu_send">שליחה</string>
    <string name="menu_quiz">חידה</string>
    <string name="menu_credit">Credit</string>
    <string name="section_2">Communicate</string>
    <string name="defaultamp">0.5</string>
    <string name="defaultfreq">440</string>
    <fraction name="iconsize">30.0</fraction>
</resources>
