<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bindict"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bin" />
        <item
            android:id="@+id/nav_letterdict"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_letter" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_quiz" />
    </group>

    <item android:title="@string/section_2">
        <menu>
            <item
                android:id="@+id/nav_credit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
