<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.am_fmcoder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_bindict"
        android:name="com.example.am_fmcoder.ui.bindict.BinFragment"
        android:label="@string/menu_bin"
        tools:layout="@layout/fragment_bindict" />

    <fragment
        android:id="@+id/nav_letterdict"
        android:name="com.example.am_fmcoder.ui.letterdict.LetterFragment"
        android:label="@string/menu_letter"
        tools:layout="@layout/fragment_letterdict" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.am_fmcoder.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.am_fmcoder.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/nav_credit"
        android:name="com.example.am_fmcoder.ui.credit.CreditFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_credit" />
</navigation>