<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ToggleButton
        android:id="@+id/AM_FM2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textOff="@string/am"
        android:textOn="@string/fm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_info_fragment"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_menu_send" />

    <EditText
        android:id="@+id/send_info_fragment"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/send_letter_view"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AM_FM">

        <LinearLayout
            android:id="@+id/send_letter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/send_bin_view"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AM_FM">

        <LinearLayout
            android:id="@+id/send_bin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="155dp"
        android:layout_height="28dp"
        android:indeterminate="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="143dp" />

</androidx.constraintlayout.widget.ConstraintLayout>